--- a/config/valid_tasks.yml
+++ b/config/valid_tasks.yml
@@ -1,9 +1,9 @@
 ---
-- :TODO: 'TODO[\s,:]+(\S.*)$'
-- :FIXME: 'FIX ?ME[\s,:]+(\S.*)$'
-- :NOTE: 'NOTE[\s,:]+(\S.*)$'
-- :BUG: 'BUG[\s,:]+(\S.*)$'
-- :CHANGED: 'CHANGED[\s,:]+(\S.*)$'
-- :OPTIMIZE: 'OPTIMIZE[\s,:]+(\S.*)$'
-- :XXX: 'XXX[\s,:]+(\S.*)$'
-- :!!!: '!!![\s,:]+(\S.*)$'
+- :TODO: 'TODO[\s,:-]+(\S.*)$'
+- :FIXME: 'FIX ?ME[\s,:-]+(\S.*)$'
+- :NOTE: 'NOTE[\s,:-]+(\S.*)$'
+- :BUG: 'BUG[\s,:-]+(\S.*)$'
+- :CHANGED: 'CHANGED[\s,:-]+(\S.*)$'
+- :OPTIMIZE: 'OPTIMIZE[\s,:-]+(\S.*)$'
+- :XXX: 'XXX[\s,:-]+(\S.*)$'
+- :!!!: '!!![\s,:-]+(\S.*)$'
